--- a/RedditStoreApp/Views/LinkListView.xaml
+++ b/RedditStoreApp/Views/LinkListView.xaml
@@ -17,30 +17,34 @@
     </Page.Resources>
 
     <Grid Background="{StaticResource DarkBackgroundBrush}">
-    <StackPanel Margin="20,10,20,10" Background="{StaticResource DarkBackgroundBrush}">
-        <Grid Height="60" Margin="0,0,0,20">
-            <StackPanel Orientation="Horizontal">
-                <lctrls:RotateButton Margin="0,0,15,0" Command="{Binding BackArrowPress}" IsRotated="{Binding IsLeft}" />
-                <TextBlock VerticalAlignment="Center" Text="programming" Style="{StaticResource SubheaderTextStyle}" FontSize="30" Padding="0, 0" />
-                <!--<TextBlock Text="{Binding Description}" Style="{StaticResource TitleTextStyle}"/>-->
-                <ProgressRing VerticalAlignment="Center" Margin="10,15,0,0" Foreground="Black" Width="20" Height="20" IsActive="{Binding CurrentSubreddit.IsLoading}" />
-            </StackPanel>
-            <ComboBox VerticalAlignment="Center" Margin="0,18,0,0" HorizontalAlignment="Right" Height="Auto" Width="138" Background="{StaticResource DarkBackgroundBrush}" BorderThickness="0"
+        <Grid Margin="20,10,20,10" Background="{StaticResource DarkBackgroundBrush}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid Height="60" Margin="0,0,0,20">
+                <StackPanel Orientation="Horizontal">
+                    <lctrls:RotateButton Margin="0,0,15,0" Command="{Binding BackArrowPress}" IsRotated="{Binding IsLeft}" />
+                    <TextBlock VerticalAlignment="Center" Text="programming" Style="{StaticResource SubheaderTextStyle}" FontSize="30" Padding="0, 0" />
+                    <!--<TextBlock Text="{Binding Description}" Style="{StaticResource TitleTextStyle}"/>-->
+                    <ProgressRing VerticalAlignment="Center" Margin="10,15,0,0" Foreground="Black" Width="20" Height="20" IsActive="{Binding CurrentSubreddit.IsLoading}" />
+                </StackPanel>
+                <ComboBox VerticalAlignment="Center" Margin="0,18,0,0" HorizontalAlignment="Right" Height="Auto" Width="138" Background="{StaticResource DarkBackgroundBrush}" BorderThickness="0"
                   ItemsSource="{Binding CurrentSubreddit.SortValues}" SelectedItem="{Binding CurrentSubreddit.CurrentSort, Mode=TwoWay}">
-                <ComboBox.ItemTemplate>
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock HorizontalAlignment="Right" Text="{Binding Converter={StaticResource SortValueConverter}}"/>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+            </Grid>
+            <ListView Grid.Row="1" ItemsSource="{Binding CurrentSubreddit.Posts}">
+                <ListView.ItemTemplate>
                     <DataTemplate>
-                        <TextBlock HorizontalAlignment="Right" Text="{Binding Converter={StaticResource SortValueConverter}}"/>
+                        <TextBlock Text="{Binding Title}"/>
                     </DataTemplate>
-                </ComboBox.ItemTemplate>
-            </ComboBox>
+                </ListView.ItemTemplate>
+            </ListView>
         </Grid>
-        <ListView ItemsSource="{Binding CurrentSubreddit.Posts}">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <TextBlock Text="{Binding Title}"/>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-    </StackPanel>
     </Grid>
 </Page>
