--- a/RedditStoreApp/Views/SubredditListView.xaml
+++ b/RedditStoreApp/Views/SubredditListView.xaml
@@ -6,20 +6,51 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
+    DataContext="{Binding Source={StaticResource Locator}, Path=Main}"
     d:DesignWidth="500"
     d:DeightHeight="786">
 
     <Grid Background="{StaticResource ApplicationPageBackgroundThemeBrush}">
-     <StackPanel Margin="20,10,20,10">
-        <Grid Height="60" Margin="0,0,0,20">
+        <Grid Margin="20,10,20,10">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="80" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
             <StackPanel Orientation="Horizontal">
                 <TextBlock VerticalAlignment="Center" Text="subreddits" Style="{StaticResource SubheaderTextStyle}" FontSize="30" Padding="0, 0" />
                 <!--<TextBlock Text="{Binding Description}" Style="{StaticResource TitleTextStyle}"/>-->
                 <ProgressRing VerticalAlignment="Center" Margin="10,15,0,0" Foreground="Black" Width="20" Height="20" IsActive="{Binding CurrentSubreddit.IsLoading}" />
             </StackPanel>
 
+            <StackPanel Grid.Row="1">
+                <TextBlock Style="{StaticResource BasicTextStyle}" Text="Quick Navigate" />
+                <StackPanel Orientation="Horizontal" Margin="0,0,0,15">
+                    <TextBox Width="300" Margin="0,0,15,0"/>
+                    <Button Content="Go!" />
+                </StackPanel>
+                <TextBlock Text="Most Popular Subreddits" FontSize="20" Style="{StaticResource GroupHeaderTextStyle}"/>
+            </StackPanel>
+
+            <Grid Grid.Row="2">
+                <ListView ItemsSource="{Binding Subreddits}" 
+                         ScrollViewer.VerticalScrollMode="Enabled" 
+                         ScrollViewer.IsVerticalRailEnabled="True" 
+                         ScrollViewer.HorizontalScrollMode="Disabled" 
+                         ScrollViewer.ZoomMode="Disabled" 
+                         ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                         ScrollViewer.IsHorizontalRailEnabled="False"
+                         ScrollViewer.IsVerticalScrollChainingEnabled="True"
+                         SelectionMode="None"
+                         IsItemClickEnabled="True"
+                         Margin="0,15,0,0">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding DisplayName}" />
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </Grid>
         </Grid>
-            
-        </StackPanel>
     </Grid>
 </Page>
