--- a/RedditStoreApp/Views/LinkListView.xaml
+++ b/RedditStoreApp/Views/LinkListView.xaml
@@ -4,7 +4,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:RedditStoreApp.View"
     xmlns:lctrls="using:RedditStoreApp.Controls"
-    xmlns:converters="using:RedditStoreApp.View.Converter"
+    xmlns:converters="using:RedditStoreApp.View.Converters"
+    xmlns:selectors="using:RedditStoreApp.Views.Selectors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     DataContext="{Binding Source={StaticResource Locator}, Path=Main}"
@@ -14,6 +15,83 @@
 
     <Page.Resources>
         <converters:SortValueConverter x:Key="SortValueConverter"/>
+        <DataTemplate x:Key="ThumbnailPostTemplate">
+            <Grid Background="White">
+                <Grid Background="White" Margin="15,5,15,5" Width="380">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Image VerticalAlignment="Center" Margin="0,0,5,0" Source="{Binding ThumbnailUrl}" Width="70" Height="52" />
+                    <TextBlock Grid.Column="1" Margin="0" Style="{StaticResource BasicTextStyle}" FontSize="16" Text="{Binding Title}" />
+                    <Grid></Grid>
+                    <StackPanel Grid.ColumnSpan="2" Grid.Column="0" Grid.Row="1" Orientation="Horizontal">
+                        <TextBlock Margin="0,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Upvotes}" Foreground="{StaticResource UpvoteBrush}"/>
+                        <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Foreground="{StaticResource UpvoteBrush}" Text="&#xE110;" />
+                        <TextBlock Margin="15,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Downvotes}" Foreground="{StaticResource DownvoteBrush}"/>
+                        <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="&#xE110;" RenderTransformOrigin="0.5,0.5" Foreground="{StaticResource DownvoteBrush}">
+                            <TextBlock.RenderTransform>
+                                <RotateTransform Angle="180"/>
+                            </TextBlock.RenderTransform>
+                        </TextBlock>
+                        <TextBlock Margin="15,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding CommentCount}"/>
+                        <TextBlock Margin="5,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="&#xE200;"/>
+                    </StackPanel>
+                    <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
+                        <TextBlock Margin="40,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="16" Text="&#xE13D;"/>
+                        <TextBlock Margin="2,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Author}"/>
+                    </StackPanel>
+                    <StackPanel  Grid.Column="1" Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
+                        <TextBlock Margin="2,0,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="2 hours ago via"/>
+                        <TextBlock Margin="5,0,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" FontWeight="Bold" Text="{Binding Domain}"/>
+                    </StackPanel>
+                </Grid>
+            </Grid>
+        </DataTemplate>
+
+        <DataTemplate x:Key="StandardPostTemplate">
+            <Grid Background="White">
+                <Grid Background="White" Margin="15,5,15,5" Width="380">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <TextBlock Margin="0" Style="{StaticResource BasicTextStyle}" FontSize="16" Text="{Binding Title}" />
+                    <Grid></Grid>
+                    <StackPanel Grid.Row="1" Orientation="Horizontal">
+                        <TextBlock Margin="0,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Upvotes}" Foreground="{StaticResource UpvoteBrush}"/>
+                        <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Foreground="{StaticResource UpvoteBrush}" Text="&#xE110;" />
+                        <TextBlock Margin="15,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Downvotes}" Foreground="{StaticResource DownvoteBrush}"/>
+                        <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="&#xE110;" RenderTransformOrigin="0.5,0.5" Foreground="{StaticResource DownvoteBrush}">
+                            <TextBlock.RenderTransform>
+                                <RotateTransform Angle="180"/>
+                            </TextBlock.RenderTransform>
+                        </TextBlock>
+                        <TextBlock Margin="15,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding CommentCount}"/>
+                        <TextBlock Margin="5,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="&#xE200;"/>
+                    </StackPanel>
+                    <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
+                        <TextBlock Margin="40,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="16" Text="&#xE13D;"/>
+                        <TextBlock Margin="2,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Author}"/>
+                    </StackPanel>
+                    <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
+                        <TextBlock Margin="2,0,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="2 hours ago via"/>
+                        <TextBlock Margin="5,0,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" FontWeight="Bold" Text="{Binding Domain}"/>
+                    </StackPanel>
+                </Grid>
+            </Grid>
+        </DataTemplate>
+
+        <selectors:PostSelector x:Key="PostDataTemplateSelector" ThumbnailTemplate="{StaticResource ThumbnailPostTemplate}" StandardTemplate="{StaticResource StandardPostTemplate}"/>
     </Page.Resources>
 
     <Grid Background="{StaticResource DarkBackgroundBrush}">
@@ -67,43 +145,7 @@
                     <TextBlock Margin="5,0,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" FontWeight="Bold" Text="i.imgur.com"/>
                 </StackPanel>
             </Grid>-->
-            <ListView Width="Auto" Grid.Row="1" ItemsSource="{Binding CurrentSubreddit.Posts}" SelectedItem="{Binding CurrentSubreddit.SelectedPost, Mode=TwoWay}" ItemContainerStyle="{StaticResource RedditListViewItem}">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <Grid Margin="15,5,15,5" Width="380">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="Auto" />
-                            </Grid.RowDefinitions>
-                            <TextBlock Margin="0" Style="{StaticResource BasicTextStyle}" FontSize="16" Text="{Binding Title}" />
-                            <Grid></Grid>
-                            <StackPanel Grid.Row="1" Orientation="Horizontal">
-                                <TextBlock Margin="0,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Upvotes}" Foreground="{StaticResource UpvoteBrush}"/>
-                                <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Foreground="{StaticResource UpvoteBrush}" Text="&#xE110;" />
-                                <TextBlock Margin="15,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Downvotes}" Foreground="{StaticResource DownvoteBrush}"/>
-                                <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="&#xE110;" RenderTransformOrigin="0.5,0.5" Foreground="{StaticResource DownvoteBrush}">
-                                    <TextBlock.RenderTransform>
-                                        <RotateTransform Angle="180"/>
-                                    </TextBlock.RenderTransform>
-                                </TextBlock>
-                                <TextBlock Margin="15,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding CommentCount}"/>
-                                <TextBlock Margin="5,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="&#xE200;"/>
-                            </StackPanel>
-                            <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
-                                <TextBlock Margin="40,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="16" Text="&#xE13D;"/>
-                                <TextBlock Margin="2,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Author}"/>
-                            </StackPanel>
-                            <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
-                                <TextBlock Margin="2,0,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="2 hours ago via"/>
-                                <TextBlock Margin="5,0,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" FontWeight="Bold" Text="{Binding Domain}"/>
-                            </StackPanel>
-                        </Grid>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
+            <ListView Width="Auto" Grid.Row="1" ItemTemplateSelector="{StaticResource PostDataTemplateSelector}" ItemsSource="{Binding CurrentSubreddit.Posts}" SelectedItem="{Binding CurrentSubreddit.SelectedPost, Mode=TwoWay}" ItemContainerStyle="{StaticResource RedditListViewItem}">
             </ListView>
         </Grid>
     </Grid>
