--- a/RedditStoreApp/Views/LinkListView.xaml
+++ b/RedditStoreApp/Views/LinkListView.xaml
@@ -48,7 +48,7 @@
                         <TextBlock Margin="2,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Author}"/>
                     </StackPanel>
                     <StackPanel  Grid.Column="1" Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
-                        <TextBlock Margin="2,0,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="2 hours ago via"/>
+                        <fusao:ApproximateDateBlock Width="180" TextAlignment="Right" Margin="2,0,0,0" Style="{StaticResource BasicDateTextStyle}" FontSize="14" Date="{Binding Created}" />
                         <TextBlock Margin="5,0,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" FontWeight="Bold" Text="{Binding Domain}"/>
                     </StackPanel>
                 </Grid>
@@ -85,7 +85,7 @@
                         <TextBlock Margin="2,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Author}"/>
                     </StackPanel>
                     <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
-                        <TextBlock Margin="2,0,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="2 hours ago via"/>
+                        <fusao:ApproximateDateBlock Width="180" TextAlignment="Right" Margin="2,0,0,0" Style="{StaticResource BasicDateTextStyle}" FontSize="14" Date="{Binding Created}" />
                         <TextBlock Margin="5,0,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" FontWeight="Bold" Text="{Binding Domain}"/>
                     </StackPanel>
                 </Grid>
