--- a/RedditStoreApp/Views/PostHeader.xaml
+++ b/RedditStoreApp/Views/PostHeader.xaml
@@ -31,10 +31,10 @@
                             <ProgressRing VerticalAlignment="Center" Margin="10,15,0,0" Foreground="Black" Width="20" Height="20" IsActive="{Binding CurrentSubreddit.SelectedPost.IsLoading}" />
                         </StackPanel>
                         <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal">
-                            <fusao:ApproximateDateBlock Width="180" Margin="2,3,0,1" Style="{StaticResource BasicDateTextStyle}" FontSize="14" Date="{Binding CurrentSubreddit.SelectedPost.Created}" />
-                            <TextBlock Margin="2,8,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text=" via "/>
-                            <TextBlock Margin="5,8,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" FontWeight="Bold" Text="{Binding CurrentSubreddit.SelectedPost.Domain}"/>
 
+                            <fusao:ApproximateDateBlock Width="130" TextAlignment="Right" Margin="0,0,0,1" Style="{StaticResource BasicDateTextStyle}" FontSize="14" Date="{Binding CurrentSubreddit.SelectedPost.Created}" />
+                            <TextBlock Margin="2,0,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text=" via "/>
+                            <TextBlock Margin="5,0,5,0" Style="{StaticResource BasicTextStyle}" FontSize="14" FontWeight="Bold" Text="{Binding CurrentSubreddit.SelectedPost.Domain}"/>
                         </StackPanel>
                         <StackPanel Grid.Column="1" Grid.Row="2" Orientation="Horizontal">
                             <TextBlock Margin="0,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding CurrentSubreddit.SelectedPost.Upvotes}" Foreground="{StaticResource UpvoteBrush}"/>
