--- a/RedditStoreApp/Views/PostHeader.xaml
+++ b/RedditStoreApp/Views/PostHeader.xaml
@@ -1,61 +1,68 @@
 ﻿<Page
+    x:Name="_page"
     x:Class="RedditStoreApp.Views.PostHeader"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:lctrls="using:RedditStoreApp.Controls"
     xmlns:local="using:RedditStoreApp.Views"
     xmlns:fusao="using:Fusao.Controls"
+    xmlns:converters="using:RedditStoreApp.Views.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     DataContext="{Binding Source={StaticResource Locator}, Path=Main}"
     d:DesignHeight="120"
     d:DesignWidth="800">
-    <Grid Background="{StaticResource ApplicationPageBackgroundThemeBrush}">
-        <Grid Margin="20,10,20,10">
-            <StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="*" />
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
-                        <fusao:RotateButton Margin="0,0,15,0" Command="{Binding BackArrowPress}" IsRotated="False" />
-                        <StackPanel Grid.Column="1" Orientation="Horizontal">
-                            <TextBlock VerticalAlignment="Center" TextWrapping="Wrap" Text="{Binding CurrentSubreddit.SelectedPost.Title}" Style="{StaticResource SubheaderTextStyle}" FontSize="30" Padding="0, 0" />
-                            <ProgressRing VerticalAlignment="Center" Margin="10,15,0,0" Foreground="Black" Width="20" Height="20" IsActive="{Binding CurrentSubreddit.SelectedPost.IsLoading}" />
-                        </StackPanel>
-                        <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal">
+    <Page.Resources>
+        <converters:VisibilityConverter x:Name="VisibilityConverter" IsInverse="False" />
+    </Page.Resources>
 
-                            <fusao:ApproximateDateBlock Width="130" TextAlignment="Right" Margin="0,0,0,1" Style="{StaticResource BasicDateTextStyle}" FontSize="14" Date="{Binding CurrentSubreddit.SelectedPost.Created}" />
-                            <TextBlock Margin="2,0,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text=" via "/>
-                            <TextBlock Margin="5,0,5,0" Style="{StaticResource BasicTextStyle}" FontSize="14" FontWeight="Bold" Text="{Binding CurrentSubreddit.SelectedPost.Domain}"/>
-                        </StackPanel>
-                        <StackPanel Grid.Column="1" Grid.Row="2" Orientation="Horizontal">
-                            <TextBlock Margin="0,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding CurrentSubreddit.SelectedPost.Upvotes}" Foreground="{StaticResource UpvoteBrush}"/>
-                            <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Foreground="{StaticResource UpvoteBrush}" Text="&#xE110;" />
-                            <TextBlock Margin="15,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding CurrentSubreddit.SelectedPost.Downvotes}" Foreground="{StaticResource DownvoteBrush}"/>
-                            <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="&#xE110;" RenderTransformOrigin="0.5,0.5" Foreground="{StaticResource DownvoteBrush}">
-                                <TextBlock.RenderTransform>
-                                    <RotateTransform Angle="180"/>
-                                </TextBlock.RenderTransform>
-                            </TextBlock>
-                            <TextBlock Margin="15,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding CurrentSubreddit.SelectedPost.CommentCount}"/>
-                            <TextBlock Margin="5,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="&#xE200;"/>
+    <Grid Width="{Binding ActualWidth, ElementName=_page}" Background="{StaticResource ApplicationPageBackgroundThemeBrush}">
+        <Grid Background="Aqua" Margin="20,10,20,10">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <fusao:RotateButton Margin="0,0,15,0" Command="{Binding BackArrowPress}" IsRotated="False" />
 
-                            <TextBlock Margin="40,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="16" Text="&#xE13D;"/>
-                            <TextBlock Margin="2,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding CurrentSubreddit.SelectedPost.Author}" Height="22" VerticalAlignment="Top"/>
-                        </StackPanel>
-                    </Grid>
+                <TextBlock Grid.Column="1" VerticalAlignment="Center" TextWrapping="Wrap" Text="{Binding CurrentSubreddit.SelectedPost.Title}" Style="{StaticResource SubheaderTextStyle}" FontSize="30" Padding="0, 0" />
+                <!--<ProgressRing VerticalAlignment="Center" Margin="10,15,0,0" Foreground="Black" Width="20" Height="20" IsActive="{Binding CurrentSubreddit.SelectedPost.IsLoading}" />-->
 
+                <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal">
+                    <fusao:ApproximateDateBlock Width="130" TextAlignment="Right" Margin="0,0,0,1" Style="{StaticResource BasicDateTextStyle}" FontSize="14" Date="{Binding CurrentSubreddit.SelectedPost.Created}" />
+                    <TextBlock Margin="2,0,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text=" via "/>
+                    <TextBlock Margin="5,0,5,0" Style="{StaticResource BasicTextStyle}" FontSize="14" FontWeight="Bold" Text="{Binding CurrentSubreddit.SelectedPost.Domain}"/>
                 </StackPanel>
 
-            </StackPanel>
+                <StackPanel Grid.Column="1" Grid.Row="2" Orientation="Horizontal">
+                    <TextBlock Margin="0,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding CurrentSubreddit.SelectedPost.Upvotes}" Foreground="{StaticResource UpvoteBrush}"/>
+                    <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Foreground="{StaticResource UpvoteBrush}" Text="&#xE110;" />
+                    <TextBlock Margin="15,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding CurrentSubreddit.SelectedPost.Downvotes}" Foreground="{StaticResource DownvoteBrush}"/>
+                    <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="&#xE110;" RenderTransformOrigin="0.5,0.5" Foreground="{StaticResource DownvoteBrush}">
+                        <TextBlock.RenderTransform>
+                            <RotateTransform Angle="180"/>
+                        </TextBlock.RenderTransform>
+                    </TextBlock>
+                    <TextBlock Margin="15,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding CurrentSubreddit.SelectedPost.CommentCount}"/>
+                    <TextBlock Margin="5,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="&#xE200;"/>
+
+                    <TextBlock Margin="40,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="16" Text="&#xE13D;"/>
+                    <TextBlock Margin="2,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding CurrentSubreddit.SelectedPost.Author}" Height="22" VerticalAlignment="Top"/>
+                </StackPanel>
+
+                <Border Grid.Column="1" Grid.Row="3" Background="Beige" BorderBrush="Pink">
+                    <TextBlock TextWrapping="Wrap" Visibility="{Binding CurrentSubreddit.SelectedPost.IsSelf, Converter={StaticResource VisibilityConverter}}"  Margin="0,10,15,15" Style="{StaticResource BasicTextStyle}" Text="{Binding CurrentSubreddit.SelectedPost.SelfText}"/>
+                </Border>
+            </Grid>
+
+
         </Grid>
     </Grid>
 </Page>
