--- a/RedditStoreApp/Views/PostHeader.xaml
+++ b/RedditStoreApp/Views/PostHeader.xaml
@@ -66,7 +66,9 @@
                 </StackPanel>
 
                 <Border x:Name="Row4Piece" Grid.Column="1" Grid.Row="4" Background="Beige" BorderBrush="Pink">
-                    <TextBlock TextWrapping="Wrap" Visibility="{Binding CurrentPost.IsSelf, Converter={StaticResource VisibilityConverter}}"  Margin="0,10,15,15" Style="{StaticResource BasicTextStyle}" Text="{Binding CurrentPost.SelfText}"/>
+                    <ScrollViewer MaxHeight="400">
+                        <TextBlock TextWrapping="Wrap" Visibility="{Binding CurrentPost.HasSelfText, Converter={StaticResource VisibilityConverter}}"  Margin="0,10,15,15" Style="{StaticResource BasicTextStyle}" Text="{Binding CurrentPost.SelfText}"/>
+                    </ScrollViewer>
                 </Border>
             </Grid>
 
